# B-SMP

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  bsmp_exe.cu
scripts/: clean.sh  runme.sh
scripts/common/: common.sh
scripts/install/: install_all.sh  install_gflags.sh  install_glog.sh  install_gtest.sh
src/: CMakeLists.txt
src/bsmp/: CMakeLists.txt  bsmp_engine.cu
src/include/bsmp/: bsmp_engine.h  smp_engine_abs.h
src/include/common/: glog_guard.h  stopwatch.h  types.h  utils.h
src/include/device/: dev_array.h  launcher.h  stream.h  types.h  utils.h
src/include/workloads/: workloads.h
